# bottomcap

./: .gitignore  README  default.nix  shell.nix
bcapc/: bcapc.cabal  default.nix
bcapc-internals/: default.nix
bcapc-internals/src/: anf.tex  ast.tex  index.tex  name.tex  overview.tex  target.tex
bcapc-internals/src/name/: mangling.tex
bcapc-internals/src/tex/: listings.tex  macros.tex  packages.tex
bcapc/main/: bcapc.hs
bcapc/src/Bcapc/: Anf.hs  Ast.hs  Constant.hs  Intrinsic.hs  Name.hs
bcapc/src/Bcapc/Anf/: Generate.hs
bcapc/src/Bcapc/Anf/Analyze/: FreeLocals.hs
bcapc/src/Bcapc/Ast/: Lower.hs
bcapc/src/Bcapc/Main/: Bcapc.hs
bcapc/src/Bcapc/Name/: Mangle.hs
bcapc/unit-test/Bcapc/Anf/: GenerateSpec.hs  TestData.hs
bcapc/unit-test/Bcapc/Anf/Analyze/: FreeLocalsSpec.hs
bcapc/unit-test/Bcapc/Name/: MangleSpec.hs
bcapstd/src/: panic.bcap  unit.bcap  void.bcap
nix/: nixpkgs.nix
