-- Update these whenever Cabal tells you to.
cabal-version: >= 1.10
build-type: Simple

-- Keep the version in sync with the one in default.nix.
name: bcapc
version: 0.0.0.0

library
    -- All source code goes in this directory.
    hs-source-dirs:
        src

    -- Expose all modules. Do not keep modules unexposed; it is very annoying
    -- if someone actually needs them (and they can work around it anyway using
    -- TemplateHaskell).
    exposed-modules:
        Bcapc.Anf,
        Bcapc.Anf.Analyze.FreeLocals,
        Bcapc.Anf.Generate,
        Bcapc.Ast,
        Bcapc.Ast.Lower,
        Bcapc.Constant,
        Bcapc.Intrinsic,
        Bcapc.Main.Bcapc,
        Bcapc.Name,
        Bcapc.Name.Mangle,
        Bcapc.Target.EcmaScript.Link,
        Bcapc.Target.EcmaScript.Object,
        Bcapc.Target.EcmaScript.Translate

    -- Can't wait to use GHC 8.6.
    default-language:
        Haskell2010

    -- Catch as many mistakes as possible, and write total functions.
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    -- Whenever you need an extension, and it is not extremely intrusive, put
    -- it here. You will probably need it elsewhere, and maintaining lists of
    -- pragmas is just annoying. Extremely intrusive extensions include
    -- ApplicativeDo, CPP, StrictData, and TemplateHaskell.
    default-extensions:
        ConstraintKinds,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        FlexibleContexts,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        LambdaCase,
        MagicHash,
        MonadComprehensions,
        MultiParamTypeClasses,
        OverloadedLists,
        OverloadedStrings,
        ScopedTypeVariables,
        StandaloneDeriving,
        UndecidableInstances,
        ViewPatterns

    -- Keep the dependencies in sync with those in default.nix.
    build-depends:
        base,
        bytestring,
        cereal,
        dlist,
        hashable,
        lens,
        mtl,
        text,
        transformers,
        unordered-containers,
        vector

test-suite unit-test
    type:
        exitcode-stdio-1.0

    hs-source-dirs:
        unit-test

    main-is:
        Main.hs

    other-modules:
        Bcapc.Anf.Analyze.FreeLocalsSpec,
        Bcapc.Anf.GenerateSpec,
        Bcapc.Anf.TestData,
        Bcapc.Name.MangleSpec,
        Bcapc.Target.EcmaScript.LinkSpec

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        OverloadedLists,
        OverloadedStrings

    build-depends:
        base,
        bcapc,
        bytestring,
        hspec,
        unordered-containers

executable bcapc
    hs-source-dirs: main
    main-is: bcapc.hs
    build-depends: base, bcapc
    default-language: Haskell2010
